<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/login_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/login_edit_text"
        android:inputType="text" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/password_edit_text"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_confirm_button" />

    <Button
        android:id="@+id/login_register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_register_button" />

</LinearLayout>